<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/taskListFragment">

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.example.pomodoroapp.list.TaskListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_task_list" >
        <action
            android:id="@+id/action_taskListFragment_to_manageTaskFragment"
            app:destination="@id/manageTaskFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim" />
        <action
            android:id="@+id/action_taskListFragment_to_taskFragment"
            app:destination="@id/taskFragment" />
    </fragment>
    <fragment
        android:id="@+id/manageTaskFragment"
        android:name="com.example.pomodoroapp.manage.ManageTaskFragment"
        android:label="@string/manage_task_label"
        tools:layout="@layout/fragment_manage_task">
        <argument
            android:name="id"
            app:argType="long" />
        <action
            android:id="@+id/action_manageTaskFragment_to_taskListFragment"
            app:destination="@id/taskListFragment"
            app:popUpTo="@id/taskListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_manageTaskFragment_to_taskFragment"
            app:destination="@id/taskFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim" />
    </fragment>
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.pomodoroapp.task.TaskFragment"
        android:label="@string/task_fragment_label"
        tools:layout="@layout/fragment_task">
        <argument
            android:name="id"
            app:argType="long" />
        <action
            android:id="@+id/action_taskFragment_to_taskListFragment"
            app:destination="@id/taskListFragment"
            app:popUpTo="@id/taskListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_taskFragment_to_manageTaskFragment"
            app:destination="@id/manageTaskFragment"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>