<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="taskViewModel"
            type="com.example.pomodoroapp.task.TaskViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".task.TaskFragment">

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/roboto"
                android:text="@{@string/timer_label(taskViewModel.timerType)}"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/timerTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Currently: In Session" />

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@{taskViewModel.currentTimeString}"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:layout_constraintBottom_toTopOf="@+id/startButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeTextView"
                tools:text="25:00" />

            <Button
                android:id="@+id/startButton"
                style="?attr/materialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="250dp"
                android:onClick="@{() -> taskViewModel.onStart()}"
                android:text="@string/start"
                app:layout_constraintBottom_toTopOf="@+id/pauseButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timerTextView" />

            <Button
                android:id="@+id/pauseButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="250dp"
                android:onClick="@{() -> taskViewModel.onPause()}"
                android:text="@string/pause"
                app:layout_constraintBottom_toTopOf="@+id/autoStartSwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startButton" />

            <TextView
                android:id="@+id/counterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{@string/counter(taskViewModel.counter, taskViewModel.numSessions)}"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.865"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.648"
                tools:text="Sessions: 1 of 4" />

            <Button
                android:id="@+id/resetButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:onClick="@{() -> taskViewModel.onReset()}"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/autoStartSwitch" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/autoStartSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="200dp"
                android:checked="@{taskViewModel.autoStart}"
                android:text="@string/auto_start_timer"
                android:onClick="@{() -> taskViewModel.onAutoStart()}"
                app:layout_constraintBottom_toTopOf="@+id/resetButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pauseButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

